Fix dropdown caret overlapping the title on mobile (Part 2: Electric Boogaloo)

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -77,9 +77,15 @@
     .dropdown__content__item {
         list-style: none;
     }
-    .dropdown__header__title {
-        width: 80%;
-        margin-left: 3rem;
+    .dropdown__header_title {
+        font-size: 1rem;
+    }
+}
+@media only screen and (max-width: 675px) {
+    .dropdown__header__title h3 {
+        font-size: 1rem;
+        justify-self: end;
+        margin: 1rem 1rem 1rem 4rem;
     }
 }
 
